--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,11 @@
 project_id = "azyijdmfgkvbvwphjdqv"
+[functions.send-quote-notification]
+enabled = true
+verify_jwt = true
+import_map = "./functions/send-quote-notification/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/send-quote-notification/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/send-quote-notification/*.html" ]
